fixed bug causing the soical media icons having too big of a clickable space around them

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,15 +165,12 @@ footer {
 
 .socials li {
   display: inline;
-}
-
-ul .sm {
   font-size: 150%;
   margin: 2%;
   padding: 5%;
   color: black;
-  
 }
+
 
 
 #pics {
